# advent-of-code

./: .gitignore  README.md  environment.yml  new_puzzle.bat  pyproject.toml
solutions/: config.py
solutions/utils/: __init__.py  file_manager.py  profiler.py
solutions/year_2020/day_1/: report_repair.py
solutions/year_2020/day_10/: __init__.py  adapter_array.py
solutions/year_2020/day_11/: __init__.py  seating_system.py  seating_system_reddit.py
solutions/year_2020/day_12/: rain_risk.py
solutions/year_2020/day_13/: shuttle_search.py
solutions/year_2020/day_14/: __init__.py  docking_data.py
solutions/year_2020/day_15/: rambunctious_recitation.py
solutions/year_2020/day_16/: ticket_translation.py
solutions/year_2020/day_17/: conway_cubes.py  conway_cubes_reddit.py
solutions/year_2020/day_18/: operation_order.py
solutions/year_2020/day_2/: password_philosophy.py
solutions/year_2020/day_3/: __init__.py  toboggan_trajectory.py
solutions/year_2020/day_4/: __init__.py  (+1 more)
solutions/year_2022/: __init__.py
src/solutions/: run_puzzle.py
src/year_2020/: config.py
tests/year_2023/: test_day_1_part_2.py  test_day_2_part_1.py  test_day_3_part_1.py  test_day_3_part_2.py  test_year_2023_day_1_part_1.py  test_year_2023_day_2_part_2.py  test_year_2023_day_4_part_1.py  test_year_2023_day_4_part_2.py  test_year_2023_day_5_part_1.py  test_year_2023_day_5_part_2.py
tests/year_2024/: test_day_1_part_1.py  test_part_2.py  test_year_2024_day_2_part_1.py  test_year_2024_day_2_part_2.py  test_year_2024_day_3_part_1.py  test_year_2024_day_3_part_2.py
(+60 files in other folders)
